# gameeapi

./: README.md  pyproject.toml
src/gameeapi/: __init__.py  gamee_api_client.py
