[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gameeapi"
version = "1.0.2"

description = "An unofficial API wrapper for gamee.com."

readme = "README.md"
readme-content-type = "text/markdown"

authors = [
    {name = "Zrekryu", email = "zrekryu@gmail.com"}
]

keywords = [
    "gamee", "gamee-api",
    "telegram", "telegrambot"
]

requires-python = ">=3.11"

dependencies = [
    "httpx"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/zrekryu/gamee-api"
Issues = "https://github.com/zrekryu/gamee-api/issues"